--- a/ATOToolDemo/MainWindow.xaml
+++ b/ATOToolDemo/MainWindow.xaml
@@ -5,20 +5,98 @@
     xmlns:Fluent="urn:fluent-ribbon"
     xmlns:command="clr-namespace:GalaSoft.MvvmLight.Command;assembly=GalaSoft.MvvmLight.Platform"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
     xmlns:local="clr-namespace:ATOToolDemo"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="ATO调试工具"
     Width="800"
     Height="450"
-    Icon="Pictures\MVVMLight.png"
     IsIconVisible="True"
     WindowStartupLocation="CenterScreen"
     WindowStyle="None"
     mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
+        <!--  用来绑定显示软件标题  -->
+        <TextBlock
+            x:Name="TitleString"
+            Text="ATO调试工具"
+            Visibility="Collapsed" />
+
+        <Fluent:Ribbon
+            x:Name="ribbon"
+            Grid.Row="0"
+            AutomaticStateManagement="True"
+            CanMinimize="False">
+            <Fluent:Ribbon.QuickAccessItems>
+                <Fluent:QuickAccessMenuItem IsChecked="true">
+                    <Fluent:Button
+                        Command="{Binding SaveCommand}"
+                        Header="保存"/>
+                </Fluent:QuickAccessMenuItem>
+                <Fluent:QuickAccessMenuItem IsChecked="true">
+                    <Fluent:Button
+                        Command="{Binding UndoCommand}"
+                        Header="撤销"/>
+                </Fluent:QuickAccessMenuItem>
+                <Fluent:QuickAccessMenuItem IsChecked="true">
+                    <Fluent:Button
+                        Command="{Binding SelectLineCommand}"
+                        Header="选择线路"/>
+                </Fluent:QuickAccessMenuItem>
+            </Fluent:Ribbon.QuickAccessItems>
+            <Fluent:Ribbon.Menu>
+                <Grid>
+                    <Fluent:Backstage x:Name="Backstage">
+                        <Fluent:BackstageTabControl>
+                            <Fluent:Button
+                                Command="{Binding NewFileCommand}"
+                                Header="新建"/>
+                            <Fluent:Button
+                                Command="{Binding SaveCommand}"
+                                Header="保存"/>
+                            <Fluent:Button
+                                Command="{Binding OpenCommand}"
+                                Header="打开"/>
+                            <Fluent:SeparatorTabItem />
+                            <Fluent:BackstageTabItem Header="最近项目">
+                                <TabControl Margin="20,5,20,5" Style="{DynamicResource InnerBackstageTabControlStyle}">
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="SelectionChanged">
+                                            <i:InvokeCommandAction Command="{Binding RecentSelectedCommand}" />
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                    <Fluent:SeparatorTabItem Header="近期打开的项目" />
+                                    <TabItem Header="{Binding RecentName}" />
+                                </TabControl>
+                            </Fluent:BackstageTabItem>
+                        </Fluent:BackstageTabControl>
+                    </Fluent:Backstage>
+                </Grid>
+            </Fluent:Ribbon.Menu>
+            <Fluent:RibbonTabItem Header="运行图">
+                <Fluent:RibbonGroupBox Header="运行图设置">
+                    <Fluent:Button
+                        Command="{Binding AddNewTimetableCommand}"
+                        Header="新建运行图"/>
+                    <Fluent:Button
+                        Command="{Binding LoadTimetableCommand}"
+                        Header="加载运行图"/>
+                    <Fluent:Button
+                        Command="{Binding SaveTimetableFileCommand}"
+                        Header="另存为"/>
+                    <Fluent:Button
+                        Command="{Binding ReadTimetableFileCommand}"
+                        Header="读取文件"/>
+                    <Fluent:Button
+                        Command="{Binding TimetableVisualCommand}"
+                        Header="显示设置"/>
+                </Fluent:RibbonGroupBox>
+            </Fluent:RibbonTabItem>
+        </Fluent:Ribbon>
     </Grid>
 </Fluent:RibbonWindow>
