--- a/ATOToolDemo/MainWindow.xaml
+++ b/ATOToolDemo/MainWindow.xaml
@@ -24,8 +24,6 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-
-
         <TextBlock
             x:Name="TitleString"
             Text="ATO调试工具"
@@ -540,18 +538,24 @@
                 Style="{StaticResource gridSplitterStyleForResizeColumns}" />
             <ScrollViewer Grid.Column="2" HorizontalScrollBarVisibility="Visible" >
                 <Border BorderBrush="Gray" BorderThickness="3">
-                    <ScrollViewer HorizontalScrollBarVisibility="Disabled">
-                        <lvc:CartesianChart >
-                            <lvc:CartesianChart Series="{Binding SeriesCollection}">
-                                <lvc:CartesianChart.AxisX>
-                                    <lvc:Axis x:Name="hobushAxisX" Labels="{Binding Labels_X}">
-                                    </lvc:Axis> 
-                                </lvc:CartesianChart.AxisX>
-                                <lvc:CartesianChart.AxisY>
-                                    <lvc:Axis x:Name="hobushAxisY" MaxValue="1000" MinValue="0" Labels="{Binding Labels_Y}"></lvc:Axis>
-                                </lvc:CartesianChart.AxisY>
-                            </lvc:CartesianChart>
-                        </lvc:CartesianChart>
+                    <ScrollViewer HorizontalScrollBarVisibility="Auto">
+                        <ListView ItemsSource="{Binding MyCharts}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <lvc:CartesianChart Width="600" Series="{Binding SeriesCollection}" >
+                                            <lvc:CartesianChart.AxisX>
+                                                <lvc:Axis x:Name="myAxisX" Labels="{Binding Labels_X}">
+                                                </lvc:Axis>
+                                            </lvc:CartesianChart.AxisX>
+                                            <lvc:CartesianChart.AxisY>
+                                                <lvc:Axis x:Name="myAxisY" MaxValue="1000" MinValue="0" />
+                                            </lvc:CartesianChart.AxisY>
+                                        </lvc:CartesianChart>
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
                     </ScrollViewer>
                 </Border>
             </ScrollViewer>
@@ -634,6 +638,7 @@
                                 <Style TargetType="DataGridCell">
                                     <Setter Property="ToolTip" Value="{Binding Tips}" />
                                     <Setter Property="Background" Value="{Binding Asc_Background,Mode=TwoWay}"/>
+                                    <Setter Property="Foreground" Value="Black"/>
                                 </Style>
                             </DataGridTextColumn.CellStyle>
                         </DataGridTextColumn>
@@ -646,6 +651,7 @@
                             <DataGridTextColumn.CellStyle>
                                 <Style TargetType="DataGridCell">
                                     <Setter Property="Background" Value="{Binding Asc_Background,Mode=TwoWay}"/>
+                                    <Setter Property="Foreground" Value="Black"/>
                                     <Style.Triggers>
                                         <DataTrigger Binding="{Binding IsDataChanged}" Value="true">
                                             <Setter Property="Background" Value="Black"/>
@@ -666,6 +672,7 @@
                             <DataGridTextColumn.CellStyle>
                                 <Style TargetType="DataGridCell">
                                     <Setter Property="Background" Value="{Binding Asc_Background,Mode=TwoWay}"/>
+                                    <Setter Property="Foreground" Value="Black"/>
                                 </Style>
                             </DataGridTextColumn.CellStyle>
                         </DataGridTextColumn>
