--- a/ATOToolDemo/MainWindow.xaml
+++ b/ATOToolDemo/MainWindow.xaml
@@ -168,9 +168,10 @@
                             <TextBlock
                                 Margin="0,0,5,0"
                                 VerticalAlignment="Center"
-                                Text="当前文件 " />
+                                Text="当前文件"
+                                />
                             <xctk:WatermarkComboBox
-                                MinWidth="80"
+                                Width="80"
                                 ItemsSource="{Binding AscSimFileNames}"
                                 SelectedIndex="{Binding Curr_Ascfile_idx}"
                                 Watermark="选择文件" />
@@ -379,12 +380,7 @@
                                             Content="下移"
                                             Command="{Binding MoveDown}"
                                             />
-                                        <Button
-                                            Margin="5,0"
-                                            Padding="10,2"
-                                            Content="更新"
-                                            Command="{Binding UpdataMultTrain}"
-                                            />
+                                        
                                     </StackPanel>
                                     <ScrollViewer Margin="0,5">
                                         <DataGrid
@@ -543,13 +539,16 @@
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <Grid>
-                                        <lvc:CartesianChart Width="600" Series="{Binding SeriesCollection}" >
+                                        <lvc:CartesianChart Width="600" Height="{Binding Height_MyChart}" Series="{Binding SeriesCollection}" >
                                             <lvc:CartesianChart.AxisX>
-                                                <lvc:Axis x:Name="myAxisX" Labels="{Binding Labels_X}">
+                                                <lvc:Axis Labels="{Binding Labels_X}" Title="Time">
+                                                    <lvc:Axis.Separator>
+                                                        <lvc:Separator Step="1" />
+                                                    </lvc:Axis.Separator>
                                                 </lvc:Axis>
                                             </lvc:CartesianChart.AxisX>
                                             <lvc:CartesianChart.AxisY>
-                                                <lvc:Axis x:Name="myAxisY" MaxValue="1000" MinValue="0" />
+                                                <lvc:Axis MaxValue="1000" MinValue="0" />
                                             </lvc:CartesianChart.AxisY>
                                         </lvc:CartesianChart>
                                     </Grid>
