--- a/ATOToolDemo/MainWindow.xaml
+++ b/ATOToolDemo/MainWindow.xaml
@@ -75,12 +75,16 @@
                             <TextBlock
                                 Margin="0,0,5,0"
                                 VerticalAlignment="Center"
-                                Text="当前列车 " />
+                                Text="当前列车 "
+                                Visibility="Hidden"
+                                />
                             <xctk:WatermarkComboBox
                                 Width="80"
                                 ItemsSource="{Binding TrainNameList}"
                                 SelectedIndex="{Binding Curr_train_idx, Mode=TwoWay}"
-                                Watermark="选择列车" />
+                                Watermark="选择列车"
+                                Visibility="Hidden"
+                                />
                         </StackPanel>
                     </Grid>
                     <Grid>
@@ -267,35 +271,39 @@
                                     IsChecked="{Binding IsAutoPaintOutDepotTrain}" />
                                 <TextBlock Text="显示单一列车" />
                             </StackPanel>
-                            <GroupBox
+                            <StackPanel Orientation="Vertical">
+                                <GroupBox
                                 BorderBrush="Gray"
                                 BorderThickness="1"
                                 Header="设置"
                                 IsEnabled="{Binding ElementName=single_train, Path=IsChecked}">
-                                <StackPanel Orientation="Horizontal">
-                                    <StackPanel Margin="5" Orientation="Horizontal">
-                                        <TextBlock
+                                    <StackPanel Orientation="Vertical">
+                                        <StackPanel Orientation="Horizontal">
+                                            <StackPanel Margin="5" Orientation="Horizontal">
+                                                <TextBlock
                                             Margin="0,0,5,0"
                                             VerticalAlignment="Center"
                                             Text="文件: " />
-                                        <xctk:WatermarkComboBox
+                                                <xctk:WatermarkComboBox
                                             Width="80"
                                             ItemsSource="{Binding FileNames_Sim}"
                                             SelectedIndex="{Binding Curr_fileSingle_idx}"
                                             Watermark="选择文件" />
-                                    </StackPanel>
-                                    <StackPanel Margin="5" Orientation="Horizontal">
-                                        <TextBlock
+                                            </StackPanel>
+                                            <StackPanel Margin="5" Orientation="Horizontal">
+                                                <TextBlock
                                             Margin="0,0,5,0"
                                             VerticalAlignment="Center"
-                                            Text="列车: " />
-                                        <xctk:WatermarkComboBox
+                                            Text="列车: " Visibility="Hidden"/>
+                                                <xctk:WatermarkComboBox
                                             Width="80"
                                             ItemsSource="{Binding TrainNameList_LogSingle}"
                                             SelectedIndex="{Binding Curr_trainSingle_idx}"
-                                            Watermark="选择列车" />
-                                    </StackPanel>
-                                    <Button
+                                            Watermark="选择列车" 
+                                            Visibility="Hidden"        
+                                                    />
+                                            </StackPanel>
+                                            <Button
                                         MinWidth="50"
                                         Margin="5"
                                         HorizontalAlignment="Stretch"
@@ -303,9 +311,27 @@
                                         Content="显示"
                                         Command="{Binding ShowSingleTrain}"
                                         />
-                                </StackPanel>
-                            </GroupBox>
-
+                                        </StackPanel>
+                                        <GroupBox
+                                            BorderBrush="Gray"
+                                            BorderThickness="1"
+                                            Header="图像类型选择">
+                                            <StackPanel Orientation="Horizontal">
+                                                <xctk:WatermarkComboBox 
+                                                        Watermark="S-V-T" 
+                                                        Margin="5,0" 
+                                                        Width="60"
+                                                        Height="20"
+                                                        ItemsSource="{Binding MyChartTypes.SVT}" 
+                                                        SelectedIndex="{Binding MyChartTypes.SVT_Index}"
+                                                        />
+                                                <RadioButton GroupName="Second_Single" Content="Status" Margin="5,5" Command="{Binding ChangeStatus}" IsChecked="{Binding MyChartTypes.IsStatusChanged}"/>
+                                                <RadioButton GroupName="Third_Single" Content="ACC" Margin="5,5" Command="{Binding ChangeAcc}" IsChecked="{Binding MyChartTypes.IsAccChanged}"/>
+                                            </StackPanel>
+                                        </GroupBox>
+                                    </StackPanel>
+                                </GroupBox>
+                            </StackPanel>
                             <StackPanel Margin="0,5" Orientation="Horizontal">
                                 <RadioButton
                                     x:Name="multi_train"
@@ -338,13 +364,14 @@
                                             <TextBlock
                                                 Margin="0,0,5,0"
                                                 VerticalAlignment="Center"
-                                                Text="列车: " />
+                                                Text="列车: "
+                                                Visibility="Hidden"/>
                                             <xctk:WatermarkComboBox
                                                 Width="80"
                                                 ItemsSource="{Binding TrainNameList_LogMult}"
                                                 SelectedIndex="{Binding Curr_trainMult_idx}"
                                                 Watermark="选择列车" 
-                                                
+                                                Visibility="Hidden"
                                                 />
                                         </StackPanel>
                                         <Button
@@ -364,7 +391,7 @@
                                             Content="添加" />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal">
-                                        
+
                                         <Button
                                             Margin="5,10"
                                             Height="20"
@@ -400,13 +427,13 @@
                                                         ItemsSource="{Binding MyChartTypes.SVT}" 
                                                         SelectedIndex="{Binding MyChartTypes.SVT_Index}"
                                                         />
-                                                     
-                                                    <RadioButton GroupName="Second_Multy" Content="Statues" Margin="5,5" Command="{Binding ChangeStatus}" IsChecked="{Binding MyChartTypes.IsStatusChanged}"/>
+
+                                                    <RadioButton GroupName="Second_Multy" Content="Status" Margin="5,5" Command="{Binding ChangeStatus}" IsChecked="{Binding MyChartTypes.IsStatusChanged}"/>
                                                     <RadioButton GroupName="Third_Multy" Content="ACC" Margin="5,5" Command="{Binding ChangeAcc}" IsChecked="{Binding MyChartTypes.IsAccChanged}"/>
                                                 </StackPanel>
                                             </GroupBox>
                                         </StackPanel>
-                                        
+
                                     </StackPanel>
                                     <ScrollViewer Margin="0,5">
                                         <DataGrid
@@ -450,7 +477,7 @@
                                                         </DataTemplate>
                                                     </DataGridTemplateColumn.CellTemplate>
                                                 </DataGridTemplateColumn>
-                                                
+
                                             </DataGrid.Columns>
                                         </DataGrid>
                                     </ScrollViewer>
@@ -567,10 +594,13 @@
                                     <Grid>
                                         <lvc:CartesianChart Width="{Binding Width_MyChart}"  Height="{Binding Height_MyChart}"
                                                             Series="{Binding SeriesCollection}" DisableAnimations="True"
-                                                            ScrollBarFill="Transparent" LegendLocation="Left"
+                                                            ScrollBarFill="Transparent" LegendLocation="Left" 
                                                             >
+                                            <!--<lvc:CartesianChart.DataTooltip>
+                                                <lvc:DefaultTooltip BulletSize="20" Background="Gray" />
+                                            </lvc:CartesianChart.DataTooltip>-->
                                             <lvc:CartesianChart.AxisX>
-                                                <lvc:Axis Labels="{Binding Labels_X}" Title="{Binding Title_X}" >
+                                                <lvc:Axis Labels="{Binding Labels_X}" Title="{Binding Title_X}">
                                                     <lvc:Axis.Separator>
                                                         <lvc:Separator Step="{Binding Step_MyChart}"/>
                                                     </lvc:Axis.Separator>
