--- a/ATOToolDemo/MainWindow.xaml
+++ b/ATOToolDemo/MainWindow.xaml
@@ -89,7 +89,7 @@
                     </Grid>
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition />
+                            <RowDefinition Height="Auto" />
                             <RowDefinition />
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
@@ -290,45 +290,24 @@
                                             SelectedIndex="{Binding Curr_fileSingle_idx}"
                                             Watermark="选择文件" />
                                             </StackPanel>
-                                            <StackPanel Margin="5" Orientation="Horizontal">
-                                                <TextBlock
-                                            Margin="0,0,5,0"
-                                            VerticalAlignment="Center"
-                                            Text="列车: " Visibility="Hidden"/>
-                                                <xctk:WatermarkComboBox
-                                            Width="80"
-                                            ItemsSource="{Binding TrainNameList_LogSingle}"
-                                            SelectedIndex="{Binding Curr_trainSingle_idx}"
-                                            Watermark="选择列车" 
-                                            Visibility="Hidden"        
-                                                    />
-                                            </StackPanel>
+                                            <xctk:WatermarkComboBox 
+                                                        Watermark="图像类型" 
+                                                        Margin="0,0,5,0" 
+                                                        Width="100"
+                                                        Height="20"
+                                                        ItemsSource="{Binding MySinChartTypes}" 
+                                                        SelectedIndex="{Binding MySinChartTypesIdx}"
+                                                        />
+                                            
                                             <Button
                                         MinWidth="50"
                                         Margin="5"
                                         HorizontalAlignment="Stretch"
                                         VerticalAlignment="Center"
                                         Content="显示"
-                                        Command="{Binding ShowSingleTrain}"
+                                        Command="{Binding ShowSingleTrain}" 
                                         />
                                         </StackPanel>
-                                        <GroupBox
-                                            BorderBrush="Gray"
-                                            BorderThickness="1"
-                                            Header="图像类型选择">
-                                            <StackPanel Orientation="Horizontal">
-                                                <xctk:WatermarkComboBox 
-                                                        Watermark="S-V-T" 
-                                                        Margin="5,0" 
-                                                        Width="60"
-                                                        Height="20"
-                                                        ItemsSource="{Binding MyChartTypes.SVT}" 
-                                                        SelectedIndex="{Binding MyChartTypes.SVT_Index}"
-                                                        />
-                                                <RadioButton GroupName="Second_Single" Content="Status" Margin="5,5" Command="{Binding ChangeStatus}" IsChecked="{Binding MyChartTypes.IsStatusChanged}"/>
-                                                <RadioButton GroupName="Third_Single" Content="ACC" Margin="5,5" Command="{Binding ChangeAcc}" IsChecked="{Binding MyChartTypes.IsAccChanged}"/>
-                                            </StackPanel>
-                                        </GroupBox>
                                     </StackPanel>
                                 </GroupBox>
                             </StackPanel>
@@ -360,35 +339,14 @@
                                                 SelectionChanged="WatermarkComboBox_SelectionChanged"
                                                 Watermark="选择文件" />
                                         </StackPanel>
-                                        <StackPanel Margin="5" Orientation="Horizontal">
-                                            <TextBlock
-                                                Margin="0,0,5,0"
-                                                VerticalAlignment="Center"
-                                                Text="列车: "
-                                                Visibility="Hidden"/>
-                                            <xctk:WatermarkComboBox
-                                                Width="80"
-                                                ItemsSource="{Binding TrainNameList_LogMult}"
-                                                SelectedIndex="{Binding Curr_trainMult_idx}"
-                                                Watermark="选择列车" 
-                                                Visibility="Hidden"
-                                                />
-                                        </StackPanel>
-                                        <Button
-                                            MinWidth="50"
-                                            Margin="5"
-                                            HorizontalAlignment="Stretch"
-                                            VerticalAlignment="Center"
-                                            Content="显示" 
-                                            Command="{Binding ShowMultTrain}"
-                                            />
-                                        <Button
-                                            MinWidth="50"
-                                            Margin="5"
-                                            HorizontalAlignment="Stretch"
-                                            VerticalAlignment="Center"
-                                            Command="{Binding AddLogFile}"
-                                            Content="添加" />
+                                        <xctk:WatermarkComboBox 
+                                                        Watermark="图像类型" 
+                                                        Margin="0,0,5,0" 
+                                                        Width="100"
+                                                        Height="20"
+                                                        ItemsSource="{Binding MyMultyChartTypes}" 
+                                                        SelectedIndex="{Binding MyMultychartTypesIdx}"
+                                                        />
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal">
 
@@ -413,27 +371,25 @@
                                             Content="下移"
                                             Command="{Binding MoveDown}"
                                             />
-                                        <StackPanel>
-                                            <GroupBox
-                                            BorderBrush="Gray"
-                                            BorderThickness="1"
-                                            Header="图像类型选择">
-                                                <StackPanel Orientation="Horizontal">
-                                                    <xctk:WatermarkComboBox 
-                                                        Watermark="S-V-T" 
-                                                        Margin="5,0" 
-                                                        Width="60"
-                                                        Height="20"
-                                                        ItemsSource="{Binding MyChartTypes.SVT}" 
-                                                        SelectedIndex="{Binding MyChartTypes.SVT_Index}"
-                                                        />
-
-                                                    <RadioButton GroupName="Second_Multy" Content="Status" Margin="5,5" Command="{Binding ChangeStatus}" IsChecked="{Binding MyChartTypes.IsStatusChanged}"/>
-                                                    <RadioButton GroupName="Third_Multy" Content="ACC" Margin="5,5" Command="{Binding ChangeAcc}" IsChecked="{Binding MyChartTypes.IsAccChanged}"/>
-                                                </StackPanel>
-                                            </GroupBox>
-                                        </StackPanel>
-
+                                        <Button
+                                            Margin="5,10"
+                                            Height="20"
+                                            Padding="10,2"
+                                            HorizontalAlignment="Stretch"
+                                            VerticalAlignment="Center"
+                                            Content="显示" 
+                                            Command="{Binding ShowMultTrain}"
+                                            />
+                                        <Button
+                                            Margin="5,10"
+                                            Height="20"
+                                            Padding="10,2"
+                                            HorizontalAlignment="Stretch"
+                                            VerticalAlignment="Center"
+                                            Command="{Binding AddLogFile}"
+                                            Content="添加" />
+                                        <!--<RadioButton GroupName="Second_Multy" Content="Status" Margin="5,5" Command="{Binding ChangeStatus}" IsChecked="{Binding MyChartTypes.IsStatusChanged}"/>
+                                                    <RadioButton GroupName="Third_Multy" Content="ACC" Margin="5,5" Command="{Binding ChangeAcc}" IsChecked="{Binding MyChartTypes.IsAccChanged}"/>--> 
                                     </StackPanel>
                                     <ScrollViewer Margin="0,5">
                                         <DataGrid
@@ -443,29 +399,23 @@
                                             HorizontalScrollBarVisibility="Visible"
                                             ItemsSource="{Binding LogFileProp_Mult, Mode=TwoWay}"
                                             SelectedIndex="{Binding Curr_MultProp_idx}"
-                                            SelectionChanged="DataGrid_SelectionChanged">
+                                            >
                                             <DataGrid.Columns>
                                                 <DataGridTextColumn
                                                     Width="auto"
                                                     MinWidth="70"
-                                                    Binding="{Binding FileName_logMult}"
+                                                    Binding="{Binding FileName}"
                                                     Header="文件" />
-                                                <DataGridTextColumn
+                                                <!--<DataGridTextColumn
                                                     Width="auto"
                                                     MinWidth="60"
                                                     Binding="{Binding Train_logMult}"
-                                                    Header="列车" />
-                                                <DataGridTemplateColumn
-                                                    Width="*"
-                                                    MinWidth="120"
-                                                    Header="区间">
-                                                    <DataGridTemplateColumn.CellTemplate>
-                                                        <DataTemplate>
-                                                            <ComboBox ItemsSource="{Binding Interval}" 
-                                                                      SelectedIndex="{Binding Interval_idx}"/>
-                                                        </DataTemplate>
-                                                    </DataGridTemplateColumn.CellTemplate>
-                                                </DataGridTemplateColumn>
+                                                    Header="列车" />-->
+                                                <DataGridTextColumn
+                                                    Width="auto"
+                                                    MinWidth="70"
+                                                    Binding="{Binding ChartType}"
+                                                    Header="图像类型" />
                                                 <DataGridTemplateColumn
                                                     Width="*"
                                                     MinWidth="120"
@@ -588,7 +538,7 @@
             <ScrollViewer Grid.Column="2" HorizontalScrollBarVisibility="Visible" >
                 <Border BorderBrush="Gray" BorderThickness="3">
                     <ScrollViewer HorizontalScrollBarVisibility="Auto">
-                        <ListView ItemsSource="{Binding MyCharts}">
+                        <ListView ItemsSource="{Binding MyCharts}" SelectedIndex="{Binding Curr_MultProp_idx}">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <Grid>
@@ -598,7 +548,7 @@
                                         Series="{Binding SeriesCollection}" 
                                         DisableAnimations="True"
                                         ScrollBarFill="Transparent" 
-                                        LegendLocation="Left">
+                                        LegendLocation="None">
                                             <!--<lvc:CartesianChart.DataTooltip>
                                                 <lvc:DefaultTooltip BulletSize="20" Background="Gray" />
                                             </lvc:CartesianChart.DataTooltip>-->
@@ -647,7 +597,7 @@
                        AutoGenerateColumns="False"
                        HorizontalScrollBarVisibility="Auto"
                        ItemsSource="{Binding Parames_Asc, Mode=OneTime}"
-                       SelectionChanged="DataGrid_SelectionChanged">
+                       >
                     <DataGrid.Columns>
                         <DataGridTextColumn 
                             Width="auto"
@@ -695,7 +645,7 @@
                        SelectedIndex="{Binding Curr_Ascpara_idx,Mode=TwoWay}"
                        SelectedValue="{Binding AscData,Mode=TwoWay}"
                        SelectedValuePath="Data"
-                       SelectionChanged="DataGrid_SelectionChanged">
+                       >
                     <DataGrid.Columns>
                         <DataGridTextColumn 
                             Width="auto"
